1556
This behaves differently now.  & works:
{code}
scala> val & = "abc"
&: java.lang.String = abc

scala> &
res0: java.lang.String = abc

scala> val x = &
x: java.lang.String = abc
{code}

But ! doesn't, and with backticks at least it really should:

{code}
scala> val ! = 5  
!: Int = 5

scala> !
     | ;
<console>:2: error: illegal start of simple expression
       ;
       ^

scala> val x = !;
<console>:1: error: illegal start of simple expression
       val x = !;
                ^

scala> val x = `!`;
<console>:1: error: illegal start of simple expression
       val x = `!`;
                  ^

scala> val `!` = 10
!: Int = 10
{code}

This works in a pinch:

{code}
scala> $$bang
res2: Int = 10

scala> val p = $$bang
p: Int = 10
{code}

Lowering priority.
